chore: update .gitignore to ignore celerybeat schedule files

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,9 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
+celerybeat-schedule-shm
+celerybeat-schedule-wal
+
 
 # Redis
 *.rdb
