--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,14 @@ __marimo__/
 
 # DevDb config
 .devdbrc
+
+# Node.js dependencies
+node_modules/
+
+# npm log-files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# npm cache
+.npm
