--- a/devshub_project/package.json
+++ b/devshub_project/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11"
   }
 }
