--- a/devshub_project/requirements.txt
+++ b/devshub_project/requirements.txt
@@ -10,12 +10,20 @@ click-plugins==1.1.1.2
 click-repl==0.3.0
 Django==5.2.8
 django-debug-toolbar==6.1.0
+easy-thumbnails==2.10.1
 idna==3.11
 kombu==5.6.2
+mccabe==0.7.0
+mypy_extensions==1.1.0
 packaging==26.0
+pathspec==1.0.4
 pillow==12.1.0
+platformdirs==4.6.0
 prompt_toolkit==3.0.52
+pycodestyle==2.14.0
+pyflakes==3.4.0
 python-dateutil==2.9.0.post0
+pytokens==0.4.1
 requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
