--- a/devshub_project/package.json
+++ b/devshub_project/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.11"
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
